--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -50,8 +50,9 @@ form {
 .wrapper {
 	width: 100%;
 	height: 100%;
-	background: rgb(158,233,162);
-	background: radial-gradient(circle, rgba(158,233,162,1) 0%, rgba(28,78,136,1) 100%);
+	background: #f4f4f4;
+	/*background: rgb(158,233,162);
+	background: radial-gradient(circle, rgba(158,233,162,1) 0%, rgba(28,78,136,1) 100%);*/
 }
 
 /******** Form Register and Login ********/
@@ -61,9 +62,7 @@ form {
 	margin: 0 auto;
 	max-width: 350px;
 	width: 100%;
-	border: 1px solid #7a858a;
 	border-radius: 5px;
-	padding: 5px;
 	opacity: 0.90;
 }
 
@@ -77,6 +76,7 @@ form {
 	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
+	border: 1px solid #dadada;
 }
 
 .login_header h1 {
@@ -91,7 +91,7 @@ form {
 }
 
 .three_letters {
-	color: #1c885a;
+	color: #3f6486;
 }
 
 input[type="submit"] {
@@ -130,6 +130,7 @@ input[type="text"]:hover, input[type="email"]:hover, input[type="password"]:hove
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 4px 0;
+    border: 1px solid #dadada;
 }
 
 .box_sigup, .box_sigin {
@@ -145,6 +146,7 @@ input[type="text"]:hover, input[type="email"]:hover, input[type="password"]:hove
     font-family: Arial, Helvetica, sans-serif;
 	font-size: 15px;
 	color: #191b1c;
+	border: 1px solid #dadada;
 }
 
 .box_sigup a, .box_sigin a  {
