--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ body {
 	float: left;
     max-width: 770px;
     width: 100%;
-    height: 100vh;
+    height: auto;
 	background: white;
 }
 
@@ -181,12 +181,11 @@ textarea:focus {
 	padding: 5px 4px 4px 5px;
 }
 
-.post_box {
-	overflow-y: scroll;
+.posts_area {
+	/*overflow-y: scroll;*/
 	width: 91%;
 	height: auto;
 	max-height: 500px;
-	background-color: #eee;
 	margin: 0 auto;
 	position: relative;
     bottom: -315px;
